--- a/TP3_localisation.ipynb
+++ b/TP3_localisation.ipynb
@@ -155,6 +155,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Evolution de l'erreur en fonction de Nens, pour différentes localisations\n",
+    "aNens=[10, 50, 100, 500, 1000, 5000, 10000]\n",
+    "nerr=np.zeros(len(aNens))\n",
+    "\n",
+    "loc_rho=2.0"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -237,7 +250,7 @@
    ],
    "source": [
     "# Construction des matrices rho associées à f1 et f2\n",
-    "crad = 6. # facteur \n",
+    "crad = 6. # facteur\n",
     "\n",
     "rho1 = np.zeros((n_grid, n_grid)) # f1\n",
     "rho2 = np.zeros((n_grid, n_grid)) # f2\n",
